      functions and expressions now propagates outwards at
      compile time for expressions like
      select([select([func.foo()])]).

    - Building on the above ideas, CompositeSelects now build
      up their ".c." collection based on the names present in
      the first selectable only; corresponding_column() now
      works fully for all embedded selectables.

- orm
    - Every Session.begin() must now be accompanied by a 
      corresponding commit() or rollback() unless the session
      is closed with Session.close().  This also includes
      the begin() which is implicit to a session created
      with transactional=True.  The biggest change 
      introduced here is that when a Session created with 
      transactional=True raises an exception during flush(), 
      you must call Session.rollback() or Session.close() in 
      order for that Session to continue after an exception.

    - fixed merge() collection-doubling bug when merging 
      transient entities with backref'ed collections.
      [ticket:961]
      
    - merge(dont_load=True) does not accept transient 
      entities, this is in continuation with the fact that
      merge(dont_load=True) does not accept any "dirty" 
      objects either.
      
    - added standalone "query" class attribute generated
      by a scoped_session.  This provides MyClass.query
      without using Session.mapper.  Use via:

        MyClass.query = Session.query_property()
        
    - The proper error message is raised when trying to access
      expired instance attributes with no session present

    - Dynamic relations, when referenced, create a strong
      reference to the parent object so that the query still
      has a parent to call against even if the parent is only
      created (and otherwise dereferenced) within the scope of
      a single expression. [ticket:938]

    - Added a mapper() flag "eager_defaults". When set to
      True, defaults that are generated during an INSERT or